# bspline

./: .gitignore  CMakeLists.txt
BSpline/: BSpline.h  BSplineBase.h  BSplineVersion.h  BSpline_visibility.h
Tests/C++/: bspline.cpp
